--- a/index.html
+++ b/index.html
@@ -54,7 +54,110 @@
                     </div>
             </div>
         </section>
-    </main>
+        <!-- what i do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">what I Do</h3>
+            <!-- .skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime rerum consequuntur nam, accusantium asperiores commodi!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Molestiae cum consequatur laudantium libero, quibusdam soluta? Nihil assumenda, sunt rerum laudantium mollitia iste quas.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">Mongodb</p>
+                    <p class="skill-description">Recusandae, a, eos dolore enim fugiat eaque mollitia iure, dicta laboriosam quidem totam itaque velit?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node JS</p>
+                    <p class="skill-description">Sequi ipsam facere aliquam delectus molestias omnis. Nam, exercitationem animi saepe cumque modi minima blanditiis!</p>
+                </div>
+            </div>
+        </section>
+        <!-- Resume Section -->
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-content">
+                </div>
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015-2017</h5>
+                        <p class="description">List Skill/technologies here.You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.Aenean commodo ligula eget dolor</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015-2017</h5>
+                        <p class="description">List Skill/technologies here.You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.Aenean commodo ligula eget dolor</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015-2017</h5>
+                        <p class="description">List Skill/technologies here.You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.Aenean commodo ligula eget dolor</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                    </div>
+                    <hr>
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015-2017</h5>
+                        <p class="description">List Skill/technologies here.You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.Aenean commodo ligula eget dolor</p>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015-2017</h5>
+                        <p class="description">List Skill/technologies here.You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.Aenean commodo ligula eget dolor</p>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015-2017</h5>
+                        <p class="description">List Skill/technologies here.You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.Aenean commodo ligula eget dolor</p>
+                    </div>
+                </div>
+                </div>
+                <div class="resume-button">
+                    <button class="btn-primary">Download CV</button>
+                </div>
+            </section>
+            <!-- contact section -->
+            <section class="contact">
+                <div>
+                    <h3 class="section-title">Let's connect</h3>
+                    <p class="section-description">
+                        Please fill out the form on this section to contact with me or call between 9: A.m and 8:00 P.M ET,Mondy through Friday.
+                    </p>
+                    <a href="">
+                        <img src="images/icons/facebook.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="images/icons/twitter.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="images/icons/insta.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <h3 class="section-title">Let's Message me</h3>
+                    <form action="">
+                        <input type="text" name="" id="" placeholder="Your Name">
+                        <input type="email" name="" id="" placeholder="Your Email">
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                        <input class="btn-primary" type="submit" value="Submit">
+                    </form>
+                </div>
+            </section>
+        </main>
     <footer>
 
     </footer>
